--- a/index.html
+++ b/index.html
@@ -1,41 +1,34 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Per4mnce.GitHub.io by per4mnce</title>
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <title>Per4mnce.GitHub.io</title>
-  <meta name="description" content="">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Per4mnce.GitHub.io</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/per4mnce" class="code">View Per4mnce.GitHub.io on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="without-description">
+        <h1>Per4mnce.GitHub.io</h1>
+        <p></p>
+        <p class="view"><a href="https://github.com/per4mnce">View the Project on GitHub <small>per4mnce</small></a></p>
+        <ul>
+          <li class="single"><a href="https://github.com/per4mnce/per4mnce.github.io">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
 <a id="welcome-to-my-github-page" class="anchor" href="#welcome-to-my-github-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my GitHub Page:</h1>
+
+<p><img src="https://avatars0.githubusercontent.com/u/13687277?v=3&amp;amp;s=60" alt="Henry's Picture"></p>
 
 <h3>
 <a id="more-about-henry" class="anchor" href="#more-about-henry" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>More about Henry:</h3>
@@ -58,26 +51,12 @@
 <li>EWS</li>
 <li>ASK</li>
 </ul>
-        </article>
-      </div>
+      </section>
     </div>
     <footer>
-      <div class="owner">
-
-      <p><a href="https://github.com/per4mnce" class="avatar"><img src="https://avatars0.githubusercontent.com/u/13687277?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/per4mnce">per4mnce</a> on <a href="https://www.github.com">GitHub</a></p>
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/per4mnce/per4mnce.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/per4mnce/per4mnce.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
 </html>
