Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
 </ul>
 
 <h3>
-<a id="current-project" class="anchor" href="#current-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current Project:</h3>
+<a id="current-interests" class="anchor" href="#current-interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current Interests:</h3>
 
-<p><a href="https://developer.amazon.com/public/solutions/alexa/alexa-skills-kit">Amazon Echo Application Development</a></p>
+<ul>
+<li><a href="https://developer.amazon.com/public/solutions/alexa/alexa-skills-kit">Amazon Echo Application Development</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Agile_software_development">Agile Application Development</a></li>
+</ul>
       </section>
     </div>
     <footer>
