--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <ul>
 <li><a href="https://github.com/per4mnce">GitHub</a></li>
 <li><a href="http://www.linkedin.com/in/henry226">Linkedin</a></li>
-<li><a href="http://www.apcp.biz">Development Portfolio</a></li>
+<li><a href="http://www.apcp.biz">Development Portfolio &amp; Blog</a></li>
 </ul>
 
 <h3>
