--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <a id="welcome-to-my-github-page" class="anchor" href="#welcome-to-my-github-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my GitHub Page:</h2>
 
 <h4>
-<a id="i-am-passionate-about-learning-technology-and-project-management" class="anchor" href="#i-am-passionate-about-learning-technology-and-project-management" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>I am passionate about learning, technology, and project management</h4>
+<a id="i-am-passionate-about-learning-technology-and-project-management" class="anchor" href="#i-am-passionate-about-learning-technology-and-project-management" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>I am passionate about learning, technology, and project management.</h4>
 
 <p><img src="https://avatars0.githubusercontent.com/u/13687277?v=3&amp;amp;s=150" alt="Henry's Picture"></p>
 
