Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <h1>Henry Schaumburger</h1>
-        <p>Software Engineer / Project Manager(PMP)</p>
+        <p>Project Manager(PMP) / Software Engineer</p>
         <p class="view"><a href="https://github.com/per4mnce">View the Project on GitHub <small>per4mnce</small></a></p>
         <ul>
           <li class="single"><a href="https://github.com/per4mnce/per4mnce.github.io">View On <strong>GitHub</strong></a></li>
